# pac_man

./: Makefile  README.md  config.json  pac-man.py  pacman_task_list.md  pyproject.toml  subject.md  test.py
src/: config.py  game.py  ghost.py  maze_generator.py  types.py
src/config/: config.py  config_parser.py
src/entities/: player.py
src/scenes/: game.py  game_scene.py  main_menu.py  scene.py  scene_id.py
src/ui/: button.py  maze.py  maze_cell.py  pacgum.py  panel.py  text.py
