[project]
name = "ft-pacman"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mazegenerator",
    "pygame>=2.6.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.uv.sources]
mazegenerator = { path = "mazegenerator-2.0.2-py3-none-any.whl" }
